force-app/main/default/objects/Account__x/Account__x.object-meta.xml
<CustomObject>
    <description>Read / Write replication of TC SF Accounts</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Account</externalName>
    <label>TC Account</label>
    <pluralLabel>TC Accounts</pluralLabel>
</CustomObject>