force-app/main/default/objects/Account__x/fields/Account_Manager_Email_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email_Address_c__c</fullName>
    <externalDeveloperName>Account_Manager_Email_Address__c</externalDeveloperName>
    <label>Account Manager Email Address</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>