force-app/main/default/objects/Account__x/fields/Account_Manager_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email_c__c</fullName>
    <externalDeveloperName>Account_Manager_Email__c</externalDeveloperName>
    <label>Account Manager Email (Do Not Use)</label>
    <type>Email</type>
</CustomField>