force-app/main/default/objects/Account__x/fields/Account_Owner_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name_c__c</fullName>
    <externalDeveloperName>Account_Owner_Name__c</externalDeveloperName>
    <label>Account Owner Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>