force-app/main/default/objects/Account__x/fields/Account_Owner_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Status_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Account_Owner_Status__c</externalDeveloperName>
    <label>Account Owner Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>