force-app/main/default/objects/Account__x/fields/Account_Plan_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Type_c__c</fullName>
    <externalDeveloperName>Account_Plan_Type__c</externalDeveloperName>
    <label>Account Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>