force-app/main/default/objects/Account__x/fields/Account_Record_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Count_c__c</fullName>
    <externalDeveloperName>Account_Record_Count__c</externalDeveloperName>
    <inlineHelpText>Power of One Field to assist in reporting Account Record Count on reports.</inlineHelpText>
    <label>Account Record Count</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>