force-app/main/default/objects/Account__x/fields/Amadeus_Actual_Estimated_Flag_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Actual_Estimated_Flag_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Amadeus_Actual_Estimated_Flag__c</externalDeveloperName>
    <label>Amadeus Actual/ Estimated Flag</label>
    <type>Checkbox</type>
</CustomField>