force-app/main/default/objects/Account__x/fields/Amadeus_Bookings_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Bookings_c__c</fullName>
    <externalDeveloperName>Amadeus_Bookings__c</externalDeveloperName>
    <label>Amadeus Bookings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>