force-app/main/default/objects/Account__x/fields/Amadeus_Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Property_Code_c__c</fullName>
    <externalDeveloperName>Amadeus_Property_Code__c</externalDeveloperName>
    <label>Amadeus Property Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>