force-app/main/default/objects/Account__x/fields/Amadeus_Revenue_Through_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Revenue_Through_Date_c__c</fullName>
    <externalDeveloperName>Amadeus_Revenue_Through_Date__c</externalDeveloperName>
    <label>Amadeus Revenue Through Date</label>
    <type>Date</type>
</CustomField>