force-app/main/default/objects/Account__x/fields/Billing_Address_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Description_c__c</fullName>
    <externalDeveloperName>Billing_Address_Description__c</externalDeveloperName>
    <label>Billing Address Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>