force-app/main/default/objects/Account__x/fields/BR_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>BR_Comments_c__c</fullName>
    <externalDeveloperName>BR_Comments__c</externalDeveloperName>
    <label>Automated BR Reporting Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>