force-app/main/default/objects/Account__x/fields/Brand_0_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_0_c__c</fullName>
    <externalDeveloperName>Brand_0__c</externalDeveloperName>
    <label>Brand</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>