force-app/main/default/objects/Account__x/fields/Brand_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_c__c</fullName>
    <externalDeveloperName>Brand_Name__c</externalDeveloperName>
    <label>Brand Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>