force-app/main/default/objects/Account__x/fields/Bundle_Implementation_Live_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Implementation_Live_Date_c__c</fullName>
    <externalDeveloperName>Bundle_Implementation_Live_Date__c</externalDeveloperName>
    <inlineHelpText>What is the Live date of the first Bundle product going Live?</inlineHelpText>
    <label>Bundle RES  Implementation Live Date</label>
    <type>Date</type>
</CustomField>