force-app/main/default/objects/Account__x/fields/Business_Intelligence_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Intelligence_c__c</fullName>
    <externalDeveloperName>Business_Intelligence__c</externalDeveloperName>
    <label>CPL Business Intelligence</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Ownership Group</fullName>
            </value>
            <value>
                <fullName>Regional Office / Cluster</fullName>
            </value>
            <value>
                <fullName>Reservations Processor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>