force-app/main/default/objects/Account__x/fields/Business_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_c__c</fullName>
    <externalDeveloperName>Business_Type__c</externalDeveloperName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Brand Manager</fullName>
            </value>
            <value>
                <fullName>Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hotel Chain</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Marketing Firm</fullName>
            </value>
            <value>
                <fullName>OTA Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ownership Group</fullName>
            </value>
            <value>
                <fullName>Regional Office/Cluster</fullName>
            </value>
            <value>
                <fullName>RV Park</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Vacation Reseller</fullName>
            </value>
            <value>
                <fullName>Website Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>