force-app/main/default/objects/Account__x/fields/Channel_Data_c__c.field-meta.xml
<CustomField>
    <fullName>Channel_Data_c__c</fullName>
    <externalDeveloperName>Channel_Data__c</externalDeveloperName>
    <label>Channel Data</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>