force-app/main/default/objects/Account__x/fields/Child_Closed_Won_Opty_s_c__c.field-meta.xml
<CustomField>
    <fullName>Child_Closed_Won_Opty_s_c__c</fullName>
    <externalDeveloperName>Child_Closed_Won_Opty_s__c</externalDeveloperName>
    <inlineHelpText>INCLUDES: Closed won, actively running opty&apos;s and transaction data.  
EXCLUDES: Terminations, bundle fulfillments, sales credit adjustments</inlineHelpText>
    <label>Closed Won Opty&apos;s</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>