force-app/main/default/objects/Account__x/fields/CM_Link_Active_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Link_Active_c__c</fullName>
    <externalDeveloperName>CM_Link_Active__c</externalDeveloperName>
    <label>CM Link Active</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>