force-app/main/default/objects/Account__x/fields/CM_RDP_Active_c__c.field-meta.xml
<CustomField>
    <fullName>CM_RDP_Active_c__c</fullName>
    <externalDeveloperName>CM_RDP_Active__c</externalDeveloperName>
    <label>CM RDP Active</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>