force-app/main/default/objects/Account__x/fields/CM_Sync_Impl_Closed_to_CC_Date_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Sync_Impl_Closed_to_CC_Date_c__c</fullName>
    <externalDeveloperName>CM_Sync_Impl_Closed_to_CC_Date__c</externalDeveloperName>
    <label>CM Sync Impl Closed to CC Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>