force-app/main/default/objects/Account__x/fields/Collector_c__c.field-meta.xml
<CustomField>
    <fullName>Collector_c__c</fullName>
    <externalDeveloperName>Collector__c</externalDeveloperName>
    <label>Collector #</label>
    <length>22</length>
    <type>Text</type>
</CustomField>