force-app/main/default/objects/Account__x/fields/Company_Email_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Email_Address_c__c</fullName>
    <externalDeveloperName>Company_Email_Address__c</externalDeveloperName>
    <inlineHelpText>This is the email address that is associated with the account.  If an email address is used here, it can not be used on the contact.  If the account does not have a generic email address, please leave this field blank.</inlineHelpText>
    <label>Generic Company Email Address</label>
    <length>35</length>
    <type>Text</type>
</CustomField>