force-app/main/default/objects/Account__x/fields/CPL_Owner_Bundle_Reservation_Solutions_c__c.field-meta.xml
<CustomField>
    <fullName>CPL_Owner_Bundle_Reservation_Solutions_c__c</fullName>
    <externalDeveloperName>CPL_Owner_Bundle_Reservation_Solutions__c</externalDeveloperName>
    <label>CPL Owner - Bundle/Reservation Solutions</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>