force-app/main/default/objects/Account__x/fields/CPL_Owner_Preference_Media_c__c.field-meta.xml
<CustomField>
    <fullName>CPL_Owner_Preference_Media_c__c</fullName>
    <externalDeveloperName>CPL_Owner_Preference_Media__c</externalDeveloperName>
    <label>CPL Owner - Preference Media</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>