force-app/main/default/objects/Account__x/fields/Current_Provider_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_c__c</fullName>
    <externalDeveloperName>Current_Provider__c</externalDeveloperName>
    <label>Current Res Svc Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FastBooking</fullName>
            </value>
            <value>
                <fullName>GenaRes</fullName>
            </value>
            <value>
                <fullName>HotelBank</fullName>
            </value>
            <value>
                <fullName>HubX</fullName>
            </value>
            <value>
                <fullName>Leading</fullName>
            </value>
            <value>
                <fullName>Lexington</fullName>
            </value>
            <value>
                <fullName>OpenHospitiality</fullName>
            </value>
            <value>
                <fullName>Pegasus</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>SRS</fullName>
            </value>
            <value>
                <fullName>Sceptre</fullName>
            </value>
            <value>
                <fullName>Sterling</fullName>
            </value>
            <value>
                <fullName>Summitt</fullName>
            </value>
            <value>
                <fullName>Synxis</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Unires</fullName>
            </value>
            <value>
                <fullName>Utell</fullName>
            </value>
            <value>
                <fullName>VantagePoint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>