force-app/main/default/objects/Account__x/fields/Databridge_PC_Access_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Databridge_PC_Access_Type_c__c</fullName>
    <externalDeveloperName>Databridge_PC_Access_Type__c</externalDeveloperName>
    <label>Databridge PC Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LogMeIn</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>