force-app/main/default/objects/Account__x/fields/Date_Account_Put_on_Credit_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Put_on_Credit_Hold_c__c</fullName>
    <externalDeveloperName>Date_Account_Put_on_Credit_Hold__c</externalDeveloperName>
    <label>Date Put on Credit Hold</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>