force-app/main/default/objects/Account__x/fields/Demand360_ITD_Contract_Required_c__c.field-meta.xml
<CustomField>
    <fullName>Demand360_ITD_Contract_Required_c__c</fullName>
    <externalDeveloperName>Demand360_ITD_Contract_Required__c</externalDeveloperName>
    <label>Demand360 ITD Contract Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>