force-app/main/default/objects/Account__x/fields/Digital_Media_Analyst_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Media_Analyst_Name_c__c</fullName>
    <externalDeveloperName>Digital_Media_Analyst_Name__c</externalDeveloperName>
    <label>Digital Media Analyst Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>