force-app/main/default/objects/Account__x/fields/DPA_on_File_c__c.field-meta.xml
<CustomField>
    <fullName>DPA_on_File_c__c</fullName>
    <externalDeveloperName>DPA_on_File__c</externalDeveloperName>
    <label>DPA on File</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>