force-app/main/default/objects/Account__x/fields/Email_Format_c__c.field-meta.xml
<CustomField>
    <fullName>Email_Format_c__c</fullName>
    <externalDeveloperName>Email_Format__c</externalDeveloperName>
    <label>Email Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTML (Formatted)</fullName>
            </value>
            <value>
                <fullName>Plain Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>