force-app/main/default/objects/Account__x/fields/First_AM_Actions_created_c__c.field-meta.xml
<CustomField>
    <fullName>First_AM_Actions_created_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>First_AM_Actions_created__c</externalDeveloperName>
    <label>First AM Actions created</label>
    <type>Checkbox</type>
</CustomField>