force-app/main/default/objects/Account__x/fields/Forcivity_Match_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Forcivity_Match_ID_c__c</fullName>
    <externalDeveloperName>Forcivity_Match_ID__c</externalDeveloperName>
    <inlineHelpText>Used to map Account records between the Amadeus Hospitality Salesforce Org and the TravelClick Salesforce Org. This field contains the 18 character Id of the Account record in the TravelClick Salesforce Org (formerly named the Forcivity Match ID).</inlineHelpText>
    <label>Hospitality Account ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>