force-app/main/default/objects/Account__x/fields/Galileo_Bookings_c__c.field-meta.xml
<CustomField>
    <fullName>Galileo_Bookings_c__c</fullName>
    <externalDeveloperName>Galileo_Bookings__c</externalDeveloperName>
    <label>Galileo Bookings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>