force-app/main/default/objects/Account__x/fields/Galileo_c__c.field-meta.xml
<CustomField>
    <fullName>Galileo_c__c</fullName>
    <externalDeveloperName>Galileo__c</externalDeveloperName>
    <label>Galileo #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>