force-app/main/default/objects/Account__x/fields/Galileo_Chain_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Galileo_Chain_Code_c__c</fullName>
    <externalDeveloperName>Galileo_Chain_Code__c</externalDeveloperName>
    <label>Galileo Chain Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>