force-app/main/default/objects/Account__x/fields/GDS_Fees_Transaction_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Fees_Transaction_c__c</fullName>
    <externalDeveloperName>GDS_Fees_Transaction__c</externalDeveloperName>
    <label>GDS Fees / Transaction</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>