force-app/main/default/objects/Account__x/fields/GDS_Media_Account_Type_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Media_Account_Type_c__c</fullName>
    <externalDeveloperName>GDS_Media_Account_Type__c</externalDeveloperName>
    <label>GDS Media Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>