force-app/main/default/objects/Account__x/fields/GDS_Revenue_Through_Date_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Revenue_Through_Date_c__c</fullName>
    <externalDeveloperName>GDS_Revenue_Through_Date__c</externalDeveloperName>
    <label>GDS Revenue Through Date</label>
    <type>Date</type>
</CustomField>