force-app/main/default/objects/Account__x/fields/GDS_Transactions_Year_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Transactions_Year_c__c</fullName>
    <externalDeveloperName>GDS_Transactions_Year__c</externalDeveloperName>
    <label>GDS Transactions/Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>