force-app/main/default/objects/Account__x/fields/GMS_Current_Contract_End_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Current_Contract_End_c__c</fullName>
    <externalDeveloperName>GMS_Current_Contract_End__c</externalDeveloperName>
    <label>GMS Current Contract End</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>