force-app/main/default/objects/Account__x/fields/GMS_Email_Marketing_Deliverables_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Email_Marketing_Deliverables_c__c</fullName>
    <externalDeveloperName>GMS_Email_Marketing_Deliverables__c</externalDeveloperName>
    <label>GMS/Email Marketing Deliverables</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrivals Reporting</fullName>
            </value>
            <value>
                <fullName>Cancellations/Confirmation</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Guest Survey</fullName>
            </value>
            <value>
                <fullName>PreArrivals/Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>