force-app/main/default/objects/Account__x/fields/GMS_Overview_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Overview_c__c</fullName>
    <externalDeveloperName>GMS_Overview__c</externalDeveloperName>
    <inlineHelpText>Quick overview of the overall GMS status of this group.</inlineHelpText>
    <label>GMS Overview</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>