force-app/main/default/objects/Account__x/fields/GMS_Strategist_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Strategist_c__c</fullName>
    <externalDeveloperName>GMS_Strategist__c</externalDeveloperName>
    <inlineHelpText>Accounts Marketing GMS Strategist</inlineHelpText>
    <label>GMS Strategist</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alexandra Mayer</fullName>
            </value>
            <value>
                <fullName>Arooba Shahid</fullName>
            </value>
            <value>
                <fullName>Ashley Druien</fullName>
            </value>
            <value>
                <fullName>Azelia Loh</fullName>
            </value>
            <value>
                <fullName>Bailie Minter</fullName>
            </value>
            <value>
                <fullName>Becky James</fullName>
            </value>
            <value>
                <fullName>Bernard Tan</fullName>
            </value>
            <value>
                <fullName>Campaigns Team</fullName>
            </value>
            <value>
                <fullName>Carrie Messmore</fullName>
            </value>
            <value>
                <fullName>Catoria Weekly</fullName>
            </value>
            <value>
                <fullName>Christian Padilla</fullName>
            </value>
            <value>
                <fullName>Claudia Thompson</fullName>
            </value>
            <value>
                <fullName>Colleen London</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Daniel Hosek</fullName>
            </value>
            <value>
                <fullName>Devon Ussher</fullName>
            </value>
            <value>
                <fullName>Eisha Potter</fullName>
            </value>
            <value>
                <fullName>Hannah Page</fullName>
            </value>
            <value>
                <fullName>Hayley Bogert</fullName>
            </value>
            <value>
                <fullName>Heather Griffis</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Irina Scalabrino</fullName>
            </value>
            <value>
                <fullName>Jaime de la Calzada</fullName>
            </value>
            <value>
                <fullName>Jason West</fullName>
            </value>
            <value>
                <fullName>Jeff Jackson</fullName>
            </value>
            <value>
                <fullName>Jenna Radomsky</fullName>
            </value>
            <value>
                <fullName>Jordan Arribas</fullName>
            </value>
            <value>
                <fullName>Justin Westlund</fullName>
            </value>
            <value>
                <fullName>Kirri Flanders</fullName>
            </value>
            <value>
                <fullName>Ksenia Tarasova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>