force-app/main/default/objects/Account__x/fields/Goldmine_Potential_USD_c__c.field-meta.xml
<CustomField>
    <fullName>Goldmine_Potential_USD_c__c</fullName>
    <externalDeveloperName>Goldmine_Potential_USD__c</externalDeveloperName>
    <label>Goldmine Potential (USD)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>