force-app/main/default/objects/Account__x/fields/Health_Check_c__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_c__c</fullName>
    <externalDeveloperName>Health_Check__c</externalDeveloperName>
    <label>Health Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>