force-app/main/default/objects/Account__x/fields/Hospitality_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Company_c__c</fullName>
    <externalDeveloperName>Hospitality_Company__c</externalDeveloperName>
    <label>Hospitality Company</label>
    <length>100</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>