force-app/main/default/objects/Account__x/fields/Hospitality_Corrected_Account_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Corrected_Account_Link_c__c</fullName>
    <externalDeveloperName>Hospitality_Corrected_Account_Link__c</externalDeveloperName>
    <inlineHelpText>Paste the exact name from the Hospitality org this Account should be linked to.</inlineHelpText>
    <label>Hospitality Correct Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>