force-app/main/default/objects/Account__x/fields/IHOS_Active_New_c__c.field-meta.xml
<CustomField>
    <fullName>IHOS_Active_New_c__c</fullName>
    <externalDeveloperName>IHOS_Active_New__c</externalDeveloperName>
    <label>IHOS Active New</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>