force-app/main/default/objects/Account__x/fields/IHOS_Imp_Closed_to_CC_Date_c__c.field-meta.xml
<CustomField>
    <fullName>IHOS_Imp_Closed_to_CC_Date_c__c</fullName>
    <externalDeveloperName>IHOS_Imp_Closed_to_CC_Date__c</externalDeveloperName>
    <inlineHelpText>What date has IHOS Implementation been moved to Customer Care?</inlineHelpText>
    <label>IHOS Imp Closed to CC Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>