force-app/main/default/objects/Account__x/fields/iHotelier_Imp_Manager_Notice_Date_c__c.field-meta.xml
<CustomField>
    <fullName>iHotelier_Imp_Manager_Notice_Date_c__c</fullName>
    <externalDeveloperName>iHotelier_Imp_Manager_Notice_Date__c</externalDeveloperName>
    <label>iHotelier Imp Manager Notice Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>